<resources>
    <string name="app_name">Proyecto 2ºTrim</string>
    <string name="seleccionaIdioma">Selecciona un idioma:</string>
    <string name="crearjuego">CREA TU JUEGO</string>
    <string name="crear">CREAR</string>
    <string name="unirse">UNIRSE</string>
    <string name="multijugador">UNIRSE A UNA PARTIDA</string>
    <string name="dado">LANZA EL DADO</string>
    <string name="todo">TODO</string>
    <string name="eligetunombre">ELIGE TU NOMBRE:</string>
    <string name="idioma">ELIGE TU IDIOMA</string>
    <string name="camponombre">Escribe tu name</string>
    <string name="eligetucolor">ELIGE TU COLOR:</string>
    <string name="eligeFila">ELIGE TU FILA</string>
    <string name="nombre">NOMBRE:</string>
    <string name="turnopregunta">LE TOCA PENSAR A:</string>
    <string name="resultado">RESULTADO</string>
    <string name="d_trivial">TRIVIAL</string>
    <string name="d_clock">CONTRARRELOJ</string>
    <string name="d_relajado">RELAJADO</string>
    <string name="d_desafiante">DESAFIANTE</string>
    <string name="d_maestro">MAESTRO</string>
    <string name="modo">MODO DE JUEGO</string>
    <string name="dificultad">DIFICULTAD</string>
    <string name="tirar">Tirar</string>
    <string name="jugadores">JUGADORES</string>
    <string name="vista">VISTA TABLERO</string>
    <string name="hintMenu">XXXX</string>
    <string name="respuesta">RESPUESTA</string>
    <string name="toastCreateLobby">El código de la sala debe ser de 4 números</string>
</resources>