<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".menu"
        android:background="@drawable/fondo_gow">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/margen_superior"
            android:layout_width="732dp"
            android:layout_height="62dp"
            android:layout_marginBottom="349dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/margen_inferior"
            android:layout_width="732dp"
            android:layout_height="62dp"
            android:layout_marginTop="349dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/izquierda"
            android:layout_width="359dp"
            android:layout_height="286dp"
            android:layout_marginEnd="374dp"
            app:layout_constraintBottom_toTopOf="@+id/margen_inferior"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/margen_superior">

            <TextView
                android:id="@+id/create_text"
                android:layout_width="255dp"
                android:layout_height="34dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="252dp"
                android:backgroundTint="#FFFFFF"
                android:fontFamily="@font/norsebold"
                android:foregroundTint="#000000"
                android:text="@string/crearjuego"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/image_create"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginStart="65dp"
                android:layout_marginTop="19dp"
                android:layout_marginEnd="94dp"
                android:layout_marginBottom="33dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/create_text"
                app:srcCompat="@drawable/create_gow" />

            <EditText
                android:id="@+id/create_number"
                android:layout_width="134dp"
                android:layout_height="30dp"
                android:layout_marginStart="65dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="160dp"
                android:layout_marginBottom="1dp"
                android:background="#FFFFFF"
                android:fontFamily="@font/norsebold"
                android:drawableTint="#000000"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hintMenu"
                android:inputType="number"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_create" />

            <ImageView
                android:id="@+id/create_button"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="110dp"
                android:layout_marginBottom="1dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/create_number"
                app:layout_constraintTop_toBottomOf="@+id/image_create"
                app:srcCompat="@drawable/play_gow" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/derecha"
            android:layout_width="359dp"
            android:layout_height="286dp"
            android:layout_marginStart="374dp"
            app:layout_constraintBottom_toTopOf="@+id/margen_inferior"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/margen_superior"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/join_text"
                android:layout_width="255dp"
                android:layout_height="34dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="252dp"
                android:backgroundTint="#FFFFFF"
                android:fontFamily="@font/norsebold"
                android:foregroundTint="#000000"
                android:text="@string/multijugador"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/image_multiplayer"
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_marginStart="29dp"
                android:layout_marginTop="19dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="33dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/join_text"
                app:srcCompat="@drawable/join_gow" />

            <EditText
                android:id="@+id/join_number"
                android:layout_width="134dp"
                android:layout_height="30dp"
                android:layout_marginStart="160dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="65dp"
                android:layout_marginBottom="1dp"
                android:background="#FFFFFF"
                android:drawableTint="#000000"
                android:ems="10"
                android:fontFamily="@font/norsebold"
                android:gravity="center"
                android:hint="@string/hintMenu"
                android:inputType="number"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_multiplayer" />

            <ImageView
                android:id="@+id/join_button"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_marginStart="110dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="1dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/join_number"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_multiplayer"
                app:srcCompat="@drawable/play_gow" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
